src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__ref_builtin_function_reports_invalid_param_count.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: diagnostics
---
error[E032]: this POU takes 1 argument(s) but 0 argument(s) were supplied
  ┌─ <internal>:7:13
  │
7 │             REF();
  │             ^^^ this POU takes 1 argument(s) but 0 argument(s) were supplied

error[E032]: this POU takes 1 argument(s) but 4 argument(s) were supplied
  ┌─ <internal>:8:13
  │
8 │             REF(x, 1, 2, 'abc');
  │             ^^^ this POU takes 1 argument(s) but 4 argument(s) were supplied
